--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,51 @@
-body {
+:root {
+  --branding-color: whitesmoke;
+  --heading-font-family: "Playfair Display", sans-serif;
+  --general-font-family: monospace;
+  --primary-background-color: #191d22;
+  --secondary-background-color: #2d4059;
 }
 
-h1 {
+body {
+  background-color: #191d22;
+  font-family: var(--general-font-family);
+}
+
+.hero {
+  background-color: var(--secondary-background-color);
+  line-height: 2;
+  margin: 20px 0;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.hero h1,
+h2 {
+  color: var(--branding-color);
+}
+
+.hero h1 {
+  font-family: var(--general-font-family);
+  font-size: 80px;
+  font-weight: bold;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  padding-top: 15px;
+}
+
+.hero h2 {
+  font-size: 24px;
+  font-weight: normal;
+  opacity: 75%;
+}
+
+.hero .btn-branding {
+  background-color: var(--branding-color);
+  border-radius: 4px;
+  color: black;
+  font-family: monospace;
+  font-size: 14px;
+  font-weight: bold;
+  margin: 15px 0;
+  padding: 12px 20px;
 }
