--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,7 +14,6 @@ body {
 .hero {
   background-color: var(--secondary-background-color);
   line-height: 2;
-  margin: 20px 0;
   padding-bottom: 10px;
   text-align: center;
 }
@@ -48,4 +47,42 @@ h2 {
   font-weight: bold;
   margin: 15px 0;
   padding: 12px 20px;
+}
+
+hr {
+  border-top: 3px solid var(--branding-color);
+  color: var(--branding-color);
+  margin: 0;
+}
+
+h3 {
+  color: var(--branding-color);
+  font-size: 20px;
+  font-weight: bolder;
+  opacity: 75%;
+}
+
+.basic-info {
+  line-height: 2;
+  text-align: center;
+}
+
+p {
+  color: var(--branding-color);
+  font-size: 16px;
+}
+
+.fa-linkedin,
+.fa-github {
+  color: white;
+  font-size: x-large;
+}
+
+.theater-link {
+  color: var(--branding-color);
+  text-decoration: none;
+}
+
+.social-links {
+  text-align: center;
 }
