--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -102,6 +102,14 @@ p {
   font-size: 30px;
   font-weight: bolder;
 }
+.main p {
+  line-height: 2;
+  text-align: justify;
+}
+.main a {
+  color: var(--branding-color);
+  text-decoration: none;
+}
 
 .weather-app {
   color: #a2d6f6;
@@ -109,14 +117,9 @@ p {
   font-weight: bolder;
 }
 
-.main p {
-  line-height: 2;
-  text-align: justify;
-}
-
-.main a {
-  color: var(--branding-color);
-  text-decoration: none;
+.weather-app-image {
+  border: 3px solid var(--branding-color);
+  box-shadow: 10px 10px 20px rgba(13, 12, 12, 0.2);
 }
 
 .main .weather-button {
@@ -147,6 +150,11 @@ p {
   font-weight: bolder;
 }
 
+.world-clock-app-image {
+  border: 3px solid var(--branding-color);
+  box-shadow: 10px 10px 20px rgba(13, 12, 12, 0.2);
+}
+
 .ai-generator-app {
   color: #5e87b8;
   font-size: 30px;
@@ -162,6 +170,11 @@ p {
   font-weight: bold;
   margin: 15px 0;
   padding: 12px 20px;
+}
+
+.ai-generator-app-image {
+  border: 3px solid var(--branding-color);
+  box-shadow: 10px 10px 20px rgba(13, 12, 12, 0.2);
 }
 
 footer {
