--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -193,6 +193,69 @@ footer a {
   text-decoration: none;
 }
 
+.about-header {
+  background-color: var(--secondary-background-color);
+}
+
+h1 {
+  color: var(--branding-color);
+  margin-top: 40px;
+}
+
+.about-pic {
+  border: 3px solid #505357;
+  box-shadow: 10px 10px 20px rgba(13, 12, 12, 0.2);
+  display: block;
+  margin: 0 auto;
+  max-width: 500px;
+}
+
+.about-header .btn-branding {
+  background-color: var(--branding-color);
+  border-radius: 4px;
+  color: black;
+  font-family: monospace;
+  font-size: 14px;
+  font-weight: bold;
+  margin: 15px 0;
+  padding: 12px 20px;
+}
+
+.about-titles {
+  color: var(--branding-color);
+  font-weight: bolder;
+  text-align: center;
+}
+
+.about-paragraphs {
+  line-height: 2;
+  text-align: justify;
+}
+
+.sardinia-pic {
+  border: 3px solid var(--branding-color);
+  box-shadow: 10px 10px 20px rgba(13, 12, 12, 0.2);
+}
+
+.grenoble-pic {
+  border: 3px solid var(--branding-color);
+  box-shadow: 10px 10px 20px rgba(13, 12, 12, 0.2);
+}
+
+.bruxelles-pic {
+  border: 3px solid var(--branding-color);
+  box-shadow: 10px 10px 20px rgba(13, 12, 12, 0.2);
+}
+
+.barcelona-pic {
+  border: 3px solid var(--branding-color);
+  box-shadow: 10px 10px 20px rgba(13, 12, 12, 0.2);
+}
+
+.about-footer {
+  background-color: var(--secondary-background-color);
+}
+
 @media (max-width: 576px) {
   .hero h1 {
     font-size: 65px;
