--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -6,12 +6,9 @@
   --secondary-background-color: #2d4059;
 }
 
-.navbar-bg-index {
-  background-color: var(--primary-background-color);
-}
-
 .navbar-bg {
-  background-color: var(--secondary-background-color);
+  background-color: var(--branding-color);
+  opacity: 75%;
 }
 
 .inactive {
@@ -318,8 +315,14 @@ h1 {
   margin: 0;
 }
 
+.contact-main {
+  background-color: var(--secondary-background-color);
+  padding: 30px 0;
+}
+
 .contact-paragraph {
   opacity: 75%;
+  padding: 30px 0;
 }
 
 .contact-email {
@@ -372,6 +375,14 @@ h1 {
     height: auto;
   }
 
+  .work-title {
+    font-size: 25px;
+  }
+
+  .project-title {
+    font-size: 20px;
+  }
+
   .custom-work-images-first-row {
     padding-top: 35px;
     width: 400px;
@@ -382,6 +393,10 @@ h1 {
     align-items: center;
     padding-top: 35px;
     width: 400px;
+  }
+
+  .contact-title {
+    font-size: 23px;
   }
 
   .contact-paragraph {
